moodle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
        - name: moodle
          image: bitnami/moodle:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: moodledata
              mountPath: /bitnami/moodle
      volumes:
        - name: moodledata
          persistentVolumeClaim:
            claimName: moodle-nfs-pvc
