moodle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-service
spec:
  selector:
    app: moodle
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
