moodle-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: a3976ee1d7f9546b195a4f52b78713c9-05b1576f20cca02b.elb.us-east-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moodle-service
                port:
                  number: 80
